Fix overflow on mobile

--- a/src/components/post-item.module.scss
+++ b/src/components/post-item.module.scss
@@ -2,6 +2,7 @@
 
 .post {
   margin-top: 4rem;
+  @include column(12);
 
   @include media(sm) {
     margin-top: 6rem;
