--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -43,7 +43,6 @@
   max-width: $max-width;
   margin-left: auto;
   margin-right: auto;
-  @include gutter($grid-gutter);
 }
 
 @mixin column ($size, $gutter: $grid-gutter) {
